# GSTools-Core

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: main.yml
benches/: compare_cython_rust.py  field_summate.rs  gen_benchmark_inputs.py  main.rs
src/: cov_model.rs  field.rs  krige.rs  lib.rs  short_vec.rs  variogram.rs
src/krige/: methods.rs  mod.rs
