[package]
name = "gstools-core"
version = "0.1.0"
authors = ["Lennart Schüler <mostem@posteo.de>"]
edition = "2018"
description = "The core functions of GSTools"
readme = "README.md"
homepage = "https://geostat-framework.org/#gstools"
repository = "https://github.com/GeoStat-Framework/GSTools-Core"
license = "LGPL-3.0-or-later"

[lib]
name = "gstools_core"
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
debug = true
lto = true
codegen-units = 1

[dependencies]
numpy = "0.14.1"
rayon = "1.5.1"

[dependencies.ndarray]
version = "0.15.3"
features = ["rayon", "approx"]

[dependencies.pyo3]
version = "0.14.3"
features = ["extension-module"]

[dev-dependencies]
approx = "0.4"

[dev-dependencies.criterion]
version = "0.3.5"
features = ["html_reports"]

[[bench]]
name = "field_summate"
harness = false
