[package]
name = "gstools-core"
version = "0.2.0"
authors = ["Lennart Schüler <mostem@posteo.de>"]
edition = "2018"
description = "The core functions of GSTools"
readme = "README.md"
homepage = "https://geostat-framework.org/#gstools"
repository = "https://github.com/GeoStat-Framework/GSTools-Core"
license = "LGPL-3.0-or-later"
exclude = ["dist/", ".*"]

[lib]
name = "gstools_core"
crate-type = ["cdylib", "rlib"]
bench = false

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
debug = true
lto = true
codegen-units = 1

[dependencies]
pyo3 = { version = "0.14", features = ["abi3-py36", "extension-module"] }
numpy = "0.14.1"
ndarray = { version = "0.15", features = ["rayon", "approx"] }
rayon = "1.5.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
approx = "0.4"
ndarray-rand = "0.14.0"

[[bench]]
name = "main"
harness = false
